app/assets/stylesheets/style-main.css
body {
  background-color: #373737;
  color: #fff;
  min-width: 1240px; /* 210+10+800+10+210 */
}

/* Colors */

.btn-primary {
  background-color: hsl(163, 63%, 43%);
  border-color: hsl(163, 63%, 41%);
}
.btn-primary:hover {
  background-color: hsl(163, 63%, 35%);
  border-color: hsl(163, 63%, 32%);
}
.btn-primary:focus, .btn-primary:active {
  background-color: hsl(163, 63%, 31%);
}
.btn.has-icon img {
  height: 12px;
}



.game-name h3 {
  font-size: 28px;
}
.extra-info .title {
  font-size: 18px;
  color: hsl(163, 63%, 68%);
  margin-bottom: 10px;
}
.extra-info .btn a,
.extra-info .btn a:hover,
.extra-info .btn a:focus,
.extra-info .btn a:active {
  text-decoration: none;
  color: #fff;
}
h3.divider {
  border-bottom: 1px solid hsl(163, 63%, 48%);
}
.section-heading {
  color: hsl(163, 63%, 86%);
  border-bottom: 1px solid hsl(163, 63%, 48%);
  padding-bottom: 6px;
  margin-bottom: 10px;
}
.section-heading .title { font-size: 22px; }
.section-heading .left { text-align: left; }
.section-heading .right {
  float: right;
  text-align: right;
  bottom: 0;
}
.subsection-heading, .pkg-contents-heading {
  font-size: 18px;
  color: hsl(163, 63%, 86%);
  padding: 10px 10px 5px 10px;
}
.price-list-heading {
  font-size: 18px;
  color: hsl(163, 63%, 68%);
  padding: 10px 10px 5px 10px;
}
.pkg-contents-heading {
  color: hsl(163, 63%, 86%);
}
.description h1,
.description-popup h1 {
  color: hsl(163, 63%, 68%);
  border-bottom: 1px solid rgba(221,221,221,0.5);
  font-size: 18px;
  margin-top: 10px;
}
.description h2,
.description-popup h2 {
  color: hsl(163, 63%, 68%);
  font-size: 18px;
}
.description h3,
.description h4,
.description h5,
.description h6,
.description-popup h3,
.description-popup h4,
.description-popup h5,
.description-popup h6 {
  color: hsl(163, 63%, 68%);
  font-size: 16px;
}
.reqs-container div > strong {
  color: hsl(163, 63%, 68%);
  font-size: 18px;
  font-weight: normal;
}

.pricing .game-entry:hover {
  background-color: hsla(163, 70%, 20%, 0.4);
  color: hsl(163, 63%, 68%);
}
.pricing .game-entry.selected:hover {
  color: #fff;
}
.pricing .game-entry.selected {
  background-color: rgba(255,255,255,0.18);
}

.video-container a > div:hover {
  background-color: hsla(163, 70%, 20%, 0.4);
}
.video-container a:hover {
  color: hsl(163, 63%, 68%);
}



a {
  color: hsl(163, 63%, 43%);
}
a:hover {
  color: hsl(163, 63%, 35%);
}
a:focus {
  color: hsl(163, 63%, 31%);
}
.header {
  background-color: hsl(163, 55%, 25%);
}
.content, .footer {
  background-color: rgba(30,30,30,0.4);
}
.footer {
  background-color: rgba(30,30,30,0.7);
}



.twitter-typeahead,.tt-hint,.tt-input,.tt-dropdown-menu {
  vertical-align: middle;
  width: 100%;
  color: #555;
  /* overridden by body{} above, re-overridden to normal here */
}
.tt-suggestion {
  position: relative;
}
.suggestion-link {
  position: absolute; 
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  /*z-index: 1000000;*/
}
.empty-suggestions {
  margin: 3px 20px;
  color: #999;
  font-style: italic;
}
.input-group {
  margin: auto;
  vertical-align: middle;
  width: 100%;
}
.header {
  height: 100px;
  margin-bottom: 10px;
  display: inline-flex;
}
.homepage-title {
  padding: 5px;
  margin: auto;
}
.search-bar {
  margin: auto;
}
.category-heading {
  margin: 5px 20px;
  padding: 3px 0;
  border-bottom: 1px solid #ccc;
}



/* Index styles */

.listing-container,.capsule {
  padding: 5px;
}

.game-img,.package-img {
  width: 100%;
}



/* New Deals line styling */

h3.divider {
  width: 100%;
  text-align: center;
  line-height: 0.1em;
  margin: 10px 0 20px;
} 
h3 span.divider {
  background: #373737;
  padding: 0 10px;
}



/* Package styling */

.vertical-spacer {
  background-color: #222;
  text-align: center;
}
.vertical-spacer-text {
  /*line-height: 29px; <-- assigned dynamically in js */
  white-space: nowrap;
  opacity: 0.5;
  color: #fff;
  text-align: center;
}
.package-link:hover {
  text-decoration: none;
}



/* Game page styling */

/*.underlay {
  width: 900px;
  height: 10000px;
  margin: 0 auto;
  left: 225px;
  position: absolute;
  z-index: -1000;
  background-color: rgba(255,255,255,0.1);
}*/

.vital-data * {
  padding: 0;
  /*border: 1px solid red;*/
}
.main-column {
  width: 800px;
  margin: 0 auto;
}



.img-container {
  display: inline-block;
}
.info-container {
  display: inline-block;
  width: 300px;
  float: right;
}
.score-container {
  margin: 0 15px;
  display: inline-block;
  width: 120px;
  height: 120px;
  line-height: 120px;
  white-space: nowrap;
}
.recs-num {
  font-size: 24pt;
}
.recs-container {
  margin-top: 20px;
  text-align: center;
}
.recs-word {
  height: 10pt;
  line-height: 10pt;
}



.pics * {
  padding: 0;
}
.pics {
  margin-top: 40px;
}
.img-loading-overlay {
  width: 100%;
  text-align: center;
}
.pics .img-loading-overlay {
  height: 100%;
}
.pics .img-loading-overlay-inner {
  position: absolute;

  width: 300px;
  height: 24px;

  top: 50%;
  left: 50%;
  margin: -12px 0 0 -150px;
}

/*.pics a {
  padding: 3px;
  height: 150px;
}
.pics a:hover {
  background-color: white;
}*/

#horiz_container img {
  height: 150px;
  border-radius: 5px;
}
#horiz_container_outer {
  border-color: rgba(204,204,204,0.4);
  width: 100%;
  height: 170px; /* 150+10+10 */
}
#horiz_container_inner {
  margin: 0;
  padding: 0;
}
#horiz_container {
  height: 170px;
  padding-left: 5px; /* 10/2 */
  padding-right: 5px;
}
#horiz_container li {
  margin: 10px 5px;
}
#scrollbar, #track {
  width: 100%;
}
#dragBar {
  display: none; /* made visible in ajax call */
}



.pricing {
  margin-top: 20px;
  /*border: 1px solid green;*/
}
/*.pricing div {
  border: 1px solid green;
}*/
.pricing table {
  width: 100%;
}
.pricing td {
  padding: 0;
}
.pricing .dlc-pkg-select td {
  border: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}
.pricing .subsection {
  height: 250px;
  padding-right: 10px;
  background-clip: content-box;
}
.pricing .subsection.pkgs {
  margin-top: 10px;
  height: 240px;
}
.pricing .subsection-inner {
  height: 210px; /* 250-40 */
  overflow-y: auto;
  padding: 0 10px;
  border-top: 1px solid rgba(221,221,221,0.2);
}
.pricing .empty {
  font-style: italic;
  color: #999;
}
.pricing .price-list {
  vertical-align: top;
}
/* 500-40-40=420 distributed b/w table and pkg contents */
.pricing .price-list .price-list-inner .table-container {
  height: 310px; /* actual height 330+40=370 */
  overflow-y: auto;
  padding: 0 10px;
  border-top: 1px solid rgba(221,221,221,0.2);
}
.pricing .price-list .price-list-inner table th {
  vertical-align: bottom;
  border-top: none;
  border-bottom: 1px solid rgba(221,221,221,0.2);
}
.pricing .price-list .price-list-inner table td {
  border: none;
}
.pricing .price-list .price-list-inner.dlc .table-container,
.pricing .price-list .price-list-inner.unlisted .table-container {
  height: 460px; /* 500-40=460 */
}
.pricing .price-list .price-list-pkg-contents .pkg-contents-heading {
  border-top: 1px solid rgba(221,221,221,0.2);
  border-bottom: 1px solid rgba(221,221,221,0.2);
}
.pricing .price-list .price-list-pkg-contents .list-container {
  height: 110px; /* actual height 90+40=130 */
  padding-top: 10px;
  overflow-y: auto;
}

.pricing .price-list .selected {
  display: block;
}
.pricing .price-list .unselected {
  display: none;
}
.pricing .price-loading-overlay {
  display: block;
  text-align: center;
}



.hltb-detail {
  margin-top: 40px;
}
.hltb-container {
  display: inline-block;
}
.hltb-container table {
  margin-bottom: 10px;
}
.hltb-container th {
  border-top: none !important;
}
.hltb-container * {
  border-color: rgba(221,221,221,0.2) !important;
}
.detail-container {
  padding-right: 0px;
  padding-left: 10px;
  background-clip: content-box;
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.detail-container ul {
  padding-right: 10px;
}
.detail-container li {
  margin: .3em 0;
}



.description {
  margin-top: 40px;
}
.description-container {
  padding: 10px 80px;
}
.description .img-container {
  display: block;
  text-align: center;
}



.legal {
  font-size: 11px;
  color: #999;
  margin-bottom: 0;
}



.sys-reqs {
  margin-top: 40px;
}
.reqs-container .col-md-6,
.reqs-container .col-md-12 {
  padding: 0;
}
.reqs-container ul {
  margin: 0;
}
.reqs-container {
  padding: 10px;
  padding-right: 40px;
}


.sidebar {
  position: absolute;
  width: 210px;
  text-align: center;
}
.left.sidebar {
  left: 0;
  padding-left: 10px;
}
.right.sidebar {
  right: 0;
  padding-right: 10px;
}
.left.sidebar .section-heading {text-align: left;}
.right.sidebar .section-heading {text-align: right;}



.videos .loading-container.content {
  padding: 10px;
  margin-top: 48px; /* height of "YouTube reviews" heading */
}
.video-container {
  padding: 10px;
}
.video-container a {
  color: #fff;
}
.video-container a:hover {
  text-decoration: none;
}
.video-container a > div {
  margin-top: 10px;
}
.video-container a:first-of-type > div {
  margin: 0;
}
.video-container .video {
  padding: 10px;
  font-size: 12px;
}
.video-img-container {
  width: 120px;
  height: 66px; /* 120 * 9/16 */
  overflow: hidden;
}
.video-img-container img {
  width: 100%;
  margin-top: -13px; /* 120 * 3.5/16 */
}
.video-img-container {
  margin: 0 auto;
  margin-top: 4px;
}



.search-results-container {
  display: none; /* it appears once youtube left sidebar results show up */
  text-align: left;
}
.search-results-container .content {
  padding: 10px 10px 10px 0;
}
.search-results-container ul {
  margin: 0;
}



.fancybox-type-iframe .fancybox-nav {
    width: 60px;       
}
.fancybox-type-iframe .fancybox-nav span {
    visibility: visible;
    opacity: 0.5;
}
.fancybox-type-iframe .fancybox-nav:hover span {
    opacity: 1;
}
.fancybox-type-iframe .fancybox-next {
    right: -60px;
}
.fancybox-type-iframe .fancybox-prev {
    left: -60px;
}



.reddit {
  margin-top: 40px;
}
.reddit-container {
  padding: 10px;
  padding-right: 40px;
}
.reddit-container div {
  margin-top: 5px;
}
.reddit-container div:first-of-type {
  margin: 0;
}
.reddit-container .comments,
.reddit-container .source {
  font-size: 10px;
  color: #888;
}
.reddit-container .comments {
  font-weight: bold;
}



.extra-info {
  margin-top: 20px;
}
.extra-info .img-loading-overlay {
  position: relative;
  height: 100%;
}
.extra-info .img-loading-overlay-inner {
  position: absolute;
  width: 300px;
  height: 24px;

  top: 50%;
  left: 50%;

  margin: -12px 0 0 -150px;
}
.extra-info .game-entry {
  margin: 20px 0;
  padding: 10px;
  height: 170px; /* 150+10+10 */
}
.extra-info .game-entry .headerimg {
  text-align: center;
}
.extra-info .game-entry .extra-img {
  height: 150px;
}
.extra-info .game-entry li {
  margin: .2em 0;
}
.extra-info .game-entry h4 {
  color: #fff;
  margin-top: .3em;
}
.extra-info .description-popup {
  display: none;
}
.extra-info .selected {
  display: block;
}
.extra-info .unselected {
  display: none;
}



.fancybox-skin {
  background-color: #373737;
  color: #fff;
}



.collapser,
.reload-images,
.reload-inline {
  border: none;
  width: 30px;
  height: 30px;
  padding: 5px;
}
.collapser img,
.reload-images img,
.reload-inline img {
  margin: 0 auto;
  width: 20px;
  height: 20px;
}
.collapser {
  margin-top: -30px;
  float: right;
}
.reload-images {
  margin: -48px -35px 0 0;
  float: right;
  display: none;
}



.footer {
  height: 100px;
  margin-top: 60px;
  padding-top: 20px;
  display: inline-flex;
  font-size: 11px;
  text-align: right;
}

